# sfml-launcher

./: .clang-format  .gitignore  CMakeLists.txt  compile-ruby.sh  top.sh
cmake/: FindRubyStatic.cmake
scripts/: script_01.rb  script_02.rb  script_03.rb  script_04.rb  script_05.rb  script_06.rb
scripts/built-in/: RGSS-BuiltIn.rb  RPG::Actor.rb  RPG::Animation.rb  RPG::Animation::Frame.rb  RPG::Animation::Timing.rb  RPG::Armor.rb  RPG::AudioFile.rb  RPG::Cache.rb  RPG::Class.rb  RPG::Class::Learning.rb  RPG::CommonEvent.rb  RPG::Enemy.rb  RPG::Enemy::Action.rb  RPG::Event.rb  RPG::Event::Page.rb  RPG::Event::Page::Condition.rb  RPG::Event::Page::Graphic.rb  RPG::EventCommand.rb  RPG::Item.rb  RPG::Map.rb  RPG::MapInfo.rb  RPG::MoveCommand.rb  RPG::MoveRoute.rb  RPG::Skill.rb  RPG::Sprite.rb  RPG::System.rb  RPG::System::Words.rb  RPG::Tileset.rb  RPG::Troop.rb  RPG::Troop::Member.rb  RPG::Troop::Page.rb  RPG::Troop::Page::Condition.rb  RPG::Weapon.rb  RPG::Weather.rb
shaders/: BackTextureBlend.frag  BackTextureRectBlend.frag  ChangeHue.frag  FadeTransition.frag  ImageTransition.frag  OpacityBlend.frag  SpriteColor.frag  SpriteFlash.frag  WindowCursorBg.frag  invert_shader.frag  sprite_invert-blend.frag  sprite_normal-blend.frag  viewport_normal-blend.frag
src/: Game.cpp  Game.h  GameDialog.cpp  GameDialog.h  GameFonts.cpp  GameFonts.h  GameInput.cpp  GameInput.h  GamePlayer.cpp  GamePlayer.h  GlobalTest.cpp  GlobalTest.h  app.h  loadTexture.cpp  loadTexture.h  main.cpp
src/base/: AppDefs.h  BacktraceUtils.hpp  Log.hpp  MarshalUtils.hpp  NumberUtils.hpp  RbUtils.hpp  StringEnum.cpp  StringEnum.hpp  StringUtils.hpp  Sugars.hpp  ValueType.hpp  ZlibUtils.hpp
src/consts/: PackageConsts.cpp  PackageConsts.h
src/debugger/: Breakpoints.cpp  Breakpoints.h  DebugUtils.hpp  DebugVariableScope.cpp  DebugVariableScope.h  Debugger.cpp  Debugger.h  ParentVarLocation.hpp  SerializeUtils.hpp  TcpServer.cpp  TcpServer.h  TcpServer.hpp  UnserializeUtils.hpp
src/engnine/: Audio.cpp  Audio.h  Audio.hpp  AutotilePositions.cpp  AutotilePositions.h  Autotiles.cpp  Autotiles.h  Autotiles.hpp  Bitmap.cpp  Bitmap.h  Bitmap.hpp  BlenShaders.hpp  Color.hpp  Drawable.hpp  Engine.cpp  Engine.h  Engine.hpp  EngineBase.hpp  EngineRenderEntity.hpp  EngineRenderer.cpp  EngineRenderer.h  EngineRenderer.hpp  FileTest.hpp  FileUtils.hpp  Font.hpp  Graphics.cpp  Graphics.h  Graphics.hpp  GraphicsRenderer.cpp  GraphicsRenderer.h  IOnRender.h  IOnUpdate.h  IViewportChild.h  Input.cpp  Input.h  Input.hpp  Lists.cpp  Lists.hpp  MidiPlayer.cpp  MidiPlayer.h  (+38 more)
src/engnine/base/: AudioState.hpp  Fonts.cpp  Fonts.h  Prop.hpp  PropNumber.hpp
src/engnine/internal/: Texts.hpp
src/graphics/: Graphics.hpp
src/integrator/: Convert.hpp  Integrator.hpp  It_Audio.hpp  It_Autotiles.hpp  It_Bitmap.hpp  It_Color.hpp  It_EngineLog.hpp  It_FileTest.hpp  It_Font.hpp  It_Graphics.hpp  It_Input.hpp  It_LoadSaveData.hpp  It_Plane.hpp  It_Rect.hpp  It_Sprite.hpp  It_Table.hpp  It_Tilemap.hpp  It_Tone.hpp  It_Viewport.hpp  It_Window.hpp
src/launcher/: Launcher.hpp  LauncherTimer.hpp  PackageReader.cpp  PackageReader.h  ProjectWindow.cpp  ProjectWindow.h
src/loaders/: PlayerScript.hpp  RxdataLoader.hpp  ScriptsLoader.hpp
src/modules/aeon/: AeonModuleIntegrator.cpp  AeonModuleIntegrator.h
src/modules/aeon/base/: AeonEvents.h  AeonIntegrable.cpp  AeonIntegrable.h  AeonIntegratorBase.hpp  WrappedList.cpp  WrappedList.hpp
src/modules/aeon/enums/: AeonElementState.h  AeonElementType.h
src/modules/aeon/input/: AeonInput.cpp  AeonInput.h  AeonInputKeys.h
src/modules/aeon/socket/: AeSocketTester.hpp  AeonSocket.hpp  AeonSocketBase.hpp  AeonSocketManager.cpp  AeonSocketManager.hpp  AeonSocketWorker.cpp  AeonSocketWorker.h  AeonSocketWorker.hpp
src/modules/aeon/toolkit/: AeonHitbox.hpp  ColorParser.hpp  ElementBounds.cpp  ElementBounds.h  RoundedRectShape.cpp  RoundedRectShape.h
src/modules/aeon/window/: AeonButtonElement.cpp  AeonElement.cpp  (+12 more)
src/modules/core/: Vec2f.hpp
src/modules/engine/: EngineClock.cpp  EngineClock.h  EngineClock.hpp
src/ruby/: API.hpp  RM_API.hpp  RubyService.hpp
(+15 files in other folders)
